--- a/app_server/views/game.jade
+++ b/app_server/views/game.jade
@@ -1,12 +1,5 @@
-doctype html
-html
-  head
-    meta(charset='utf-8')
-    title MyGame
-    link(rel='stylesheet', type='text/css', href='stylesheets/mystyle.css')
-    // JAVASCRIPT
-    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js')
-    script(type='text/javascript', src='javascripts/myScript.js')
+extends layout
+block content
   body(onload='footer_info();')
     .page-wrap
       header.header
