--- a/app_server/views/index.jade
+++ b/app_server/views/index.jade
@@ -1,12 +1,6 @@
-doctype html
-html
-  head
-    meta(charset='utf-8')
-    title MyGame
-    link(rel='stylesheet', href='/stylesheets/mystyle.css')
-    // JAVASCRIPT
-    script(src='http://code.jquery.com/jquery-1.9.1.min.js')
-    script(type='text/javascript', src='/javascripts/myScript.js')
+extends layout
+
+block content
   body(onload='footer_info();')
     .page-wrap
       header.header
