--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -1,7 +1,10 @@
 doctype html
 html
   head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
+    meta(charset='utf-8')
+    title MyGame
+    link(rel='stylesheet', href='/stylesheets/mystyle.css')
+    // JAVASCRIPT
+    script(src='http://code.jquery.com/jquery-1.9.1.min.js')
+    script(type='text/javascript', src='/javascripts/myScript.js')
     block content
