--- a/app_server/views/game.jade
+++ b/app_server/views/game.jade
@@ -18,6 +18,8 @@ block content
                 a(href='about.html') About
               li 
                 a(href='dynamic_test') DYNAMIC_TEST
+              li 
+                a(href='register') Register
       .main-content
         .names
           p#move_names
