--- a/app_server/views/index.jade
+++ b/app_server/views/index.jade
@@ -19,6 +19,8 @@ block content
                 a(href='about.html') About
               li 
                 a(href='dynamic_test') DYNAMIC_TEST
+              li 
+                a(href='register') Register
       .main-content
         .about_theme_left
           h1 10 fun Facts about the Brain
