--- a/app_server/views/game.jade
+++ b/app_server/views/game.jade
@@ -20,6 +20,8 @@ block content
                 a(href='dynamic_test') DYNAMIC_TEST
               li 
                 a(href='register') Register
+              li 
+                a(href='login') Login
       .main-content
         .names
           p#move_names
