--- a/app_server/views/index.jade
+++ b/app_server/views/index.jade
@@ -21,6 +21,8 @@ block content
                 a(href='dynamic_test') DYNAMIC_TEST
               li 
                 a(href='register') Register
+              li 
+                a(href='login') Login
       .main-content
         .about_theme_left
           h1 10 fun Facts about the Brain
