--- a/app_server/views/register.html
+++ b/app_server/views/register.html
@@ -19,6 +19,7 @@ extends layout
     <div class="main-content">
       <div class="content">
 			<h1>Registration Form</h1>
+      <h3> <a href = "login">Login</a></h3>
 			<form>
 				Given name:<br>
 				<input type="text" name="given_name"><br>
