comments section works

--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -4,6 +4,7 @@ html
     meta(charset='utf-8')
     title MyGame
     link(rel='stylesheet', href='/stylesheets/mystyle.css')
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css')
     // JAVASCRIPT
     script(src='http://code.jquery.com/jquery-1.9.1.min.js')
     script(type='text/javascript', src='/javascripts/myScript.js')
