--- a/public/stylesheets/mystyle.css
+++ b/public/stylesheets/mystyle.css
@@ -372,3 +372,28 @@ h3, h4 {
 	text-align: center;
 	position: relative;
 }
+
+.submit-btn {
+	background-color: #b1dbff;
+	margin: 10px 0 10px 0;
+}
+
+.post {
+	padding: 10px;
+	margin-bottom: 5px;
+	border-radius: 5px;
+}
+
+.odd {
+	background-color: #f2f9ff;
+	
+}
+.even {
+	background-color: #eceff3;
+}
+
+.form-auth {
+	max-width: 330px;
+	padding: 5px;
+	margin: 0 auto;
+}
