--- a/app_server/views/dynamic_test.jade
+++ b/app_server/views/dynamic_test.jade
@@ -23,6 +23,8 @@ block content
               li 
                 a(href='login') Login
       .main-content
+      h3#testlog
+        a(href='login') login
         .about_theme_left
           h1=value
     footer#fixed
