--- a/app_server/views/game.jade
+++ b/app_server/views/game.jade
@@ -23,6 +23,8 @@ block content
               li 
                 a(href='login') Login
       .main-content
+      h3#testlog
+        a(href='login') login
         .names
           p#move_names
           form(name='game_form')
