--- a/app_server/views/index.jade
+++ b/app_server/views/index.jade
@@ -24,6 +24,8 @@ block content
               li 
                 a(href='login') Login
       .main-content
+      h3#testlog
+        a(href='login') login
         .about_theme_left
           h1 10 fun Facts about the Brain
           img.brain_image(src='/images/brain.jpg', alt='Brain_img')
