--- a/app_server/views/index.jade
+++ b/app_server/views/index.jade
@@ -17,15 +17,13 @@ block content
                 a(href='howto.html') How To Play
               li
                 a(href='about.html') About
-              li 
-                a(href='dynamic_test') DYNAMIC_TEST
-              li 
+              li
                 a(href='register') Register
-              li 
+              li#testlog
                 a(href='login') Login
+              li
+                a(href='comments') Feedbacks
       .main-content
-      h3#testlog
-        a(href='login') login
         .about_theme_left
           h1 10 fun Facts about the Brain
           img.brain_image(src='/images/brain.jpg', alt='Brain_img')
