--- a/app_server/views/game.jade
+++ b/app_server/views/game.jade
@@ -16,15 +16,13 @@ block content
                 a(href='howto.html') How To Play
               li
                 a(href='about.html') About
-              li 
-                a(href='dynamic_test') DYNAMIC_TEST
-              li 
+              li
                 a(href='register') Register
-              li 
+              li#testlog
                 a(href='login') Login
+              li
+                a(href='comments') Feedbacks
       .main-content
-      h3#testlog
-        a(href='login') login
         .names
           p#move_names
           form(name='game_form')
